<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp" >

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/darker_gray"
            android:padding="2dp"
            android:text="@string/txt_registration_header"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_payments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView19"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/txt_registration_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rg_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rbtn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:tag="@string/tag_register"
            android:text="@string/rbtn_register_terminal" />

        <RadioButton
            android:id="@+id/rbtn_recover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/tag_recover"
            android:text="@string/rbtn_recover_terminal" />

    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <Button
            android:id="@+id/btn_next"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:text="@string/btn_next" />

    </RelativeLayout>

</LinearLayout>