<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:padding="2dp"
                    android:text="@string/header_host"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TextView10"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:paddingLeft="10dp" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView02"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/et_host_online"
                            android:text="@string/txt_online"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/et_host_online"
                            android:layout_toRightOf="@+id/TextView02"
                            android:text="@string/semicolon" />

                        <EditText
                            android:id="@+id/et_host_online"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/textView3"
                            android:ems="10" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/et_host_offline"
                            android:text="@string/txt_offline"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/TextView03"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/et_host_offline"
                            android:layout_alignBottom="@+id/TextView01"
                            android:layout_toRightOf="@+id/TextView01"
                            android:text="@string/semicolon" />

                        <EditText
                            android:id="@+id/et_host_offline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/TextView03"
                            android:ems="10" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/list_menu_text_desc"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/et_host_port"
                            android:text="@string/txt_port"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/TextView04"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/et_host_port"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/list_menu_text_desc"
                            android:text="@string/semicolon" />

                        <EditText
                            android:id="@+id/et_host_port"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/TextView04"
                            android:ems="10"
                            android:inputType="number" />

                    </RelativeLayout>
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/darker_gray"
                    android:padding="2dp"
                    android:text="@string/header_timeout"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TextView05"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:paddingLeft="10dp" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView08"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/et_timeout_session"
                            android:text="@string/txt_timeout_session"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/TextView09"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/et_timeout_session"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/TextView08"
                            android:text="@string/semicolon"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/et_timeout_session"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/TextView09"
                            android:ems="10"
                            android:enabled="false"
                            android:inputType="number" >

                            <requestFocus />
                        </EditText>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView06"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/et_timeout_upload"
                            android:text="@string/txt_timeout_upload"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/TextView07"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/et_timeout_upload"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/TextView06"
                            android:text="@string/semicolon"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/et_timeout_upload"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/TextView07"
                            android:ems="10"
                            android:enabled="false"
                            android:inputType="number" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/et_timeout_tracker"
                            android:text="@string/txt_timeout_tracker"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/et_timeout_tracker"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/textView4"
                            android:text="@string/semicolon"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <EditText
                            android:id="@+id/et_timeout_tracker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/textView5"
                            android:ems="10"
                            android:enabled="false"
                            android:inputType="number" />

                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_item_collectionsheet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/darker_gray"
                    android:padding="2dp"
                    android:text="@string/header_debug"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tv_item_collectionsheet"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" >

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/spinner_debug_enabled"
                            android:layout_marginLeft="10dp"
                            android:text="@string/txt_debug_enabled"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/spinner_debug_enabled"
                            android:layout_toRightOf="@+id/textView6"
                            android:text="@string/semicolon"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <Spinner
                            android:id="@+id/spinner_debug_enabled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/textView7" />

                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:text="@string/btn_save" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>